--- a/E-Commerce-Front-End/E-Commerce-App/src/app/product-details/product-details.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/product-details/product-details.component.html
@@ -7,12 +7,96 @@
       <div class="row wow fadeIn">
 
         <!--Grid column-->
-        <div class="col-md-6 mb-4">
 
-          <img src="http://localhost:8080/getPhotos/{{product.pCode}}" class="img-fluid" alt="">
+<!--Grid column-->
+<div id="gridColumn" class="col-md-6 mb-4">
 
-        </div>
-        <!--Grid column-->
+
+
+       <!--carousel-->
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li *ngIf="product.frontCode" data-target="#demo" data-slide-to="0" class="active"></li>
+    <li *ngIf="product.backCode" data-target="#demo" data-slide-to="1"></li>
+    <li *ngIf="product.leftCode" data-target="#demo" data-slide-to="2"></li>
+    <li *ngIf="product.rightCode" data-target="#demo" data-slide-to="3"></li>
+    <li *ngIf="product.headCode" data-target="#demo" data-slide-to="4"></li>
+    <li *ngIf="product.footCode" data-target="#demo" data-slide-to="5"></li>
+
+
+
+
+   
+  </ul>
+  
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+
+
+    <div *ngIf="product.frontCode" class="carousel-item active">
+      <img src="http://localhost:8080/getPhotos/{{product.frontCode}}" alt="">
+    </div>
+
+
+    <div *ngIf="product.backCode" class="carousel-item">
+      <img src="http://localhost:8080/getPhotos/{{product.backCode}}" alt="">
+    </div>
+
+
+
+
+
+
+
+    <div *ngIf="product.leftCode" class="carousel-item">
+        <img src="http://localhost:8080/getPhotos/{{product.leftCode}}" alt="">
+      </div>
+  
+  
+      <div *ngIf="product.rightCode" class="carousel-item">
+        <img src="http://localhost:8080/getPhotos/{{product.rightCode}}" alt="">
+      </div>
+
+
+
+    <div *ngIf="product.headCode" class="carousel-item">
+        <img src="http://localhost:8080/getPhotos/{{product.headCode}}" alt="">
+      </div>
+  
+  
+      <div *ngIf="product.footCode" class="carousel-item">
+        <img src="http://localhost:8080/getPhotos/{{product.footCode}}" alt="">
+      </div>
+
+
+
+   
+
+
+  </div>
+  
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
+<!--/.Carousel-->
+</div>
+
+
+
+
+
+
+
+
+        <!--/Grid column-->
 
         <!--Grid column-->
         <div class="col-md-6 mb-4">
@@ -85,28 +169,13 @@
       <div class="row wow fadeIn">
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-12 mb-4">
+        <div *ngFor="let pbc of products" class="col-lg-4 col-md-12 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
-
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
-
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
+          <img src="http://localhost:8080/getPhotos/{{pbc.frontCode}}" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
 
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
-
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
-
-        </div>
-        <!--Grid column-->
 
       </div>
       <!--Grid row-->
