sorting filter update

--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.scss
@@ -15,3 +15,14 @@ mat-option{
 mat-form-field{
   display: inline;
 }
+#newFilter{
+  margin-right: 20px;
+}
+
+#sortByPrice{
+  margin-left: 30px;
+  color: white;
+  margin-right: 20px;
+}
+
+
