--- a/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/home/home.component.html
@@ -46,7 +46,8 @@
       <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
 
         <!-- Navbar brand -->
-        <span class="navbar-brand">Filter, Sort > </span>
+        
+<button id="newFilter" type="button" mdbBtn color="light" mdbWavesEffect (click)="newFilter()">New filter</button>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
@@ -83,6 +84,11 @@
                   </mat-form-field>
   
 
+
+
+
+
+
                   <mat-form-field>
                       <mat-label>Name</mat-label>
                       <mat-select matInput [(ngModel)]="name">
@@ -90,55 +96,55 @@
                         </mat-select>
                     </mat-form-field>
    
+
+
+
                     <!--sorting by price-->
 
-                    <button mat-button [matMenuTriggerFor]="animals">Sort by price<span ></span></button>
+                    <button id="sortByPrice" mat-button [matMenuTriggerFor]="lowerAndUpper">Sort by price</button><i class="fa fa-caret-down" aria-hidden="true"></i>
 
-                    <mat-menu #animals="matMenu">
-                      <button mat-menu-item [matMenuTriggerFor]="vertebrates">Vertebrates</button>
-                      <button mat-menu-item [matMenuTriggerFor]="invertebrates">Invertebrates</button>
+                    <mat-menu #lowerAndUpper="matMenu">
+                      <button mat-menu-item [matMenuTriggerFor]="lowerToUpper">Lower to upper price</button>
+                      <button mat-menu-item [matMenuTriggerFor]="upperToLower">Upper to lower price</button>
                     </mat-menu>
                     
-                    <mat-menu #vertebrates="matMenu">
-                      <button mat-menu-item [matMenuTriggerFor]="fish">Fishes</button>
-                      <button mat-menu-item [matMenuTriggerFor]="amphibians">Amphibians</button>
-                      <button mat-menu-item [matMenuTriggerFor]="reptiles">Reptiles</button>
-                      <button mat-menu-item>Birds</button>
-                      <button mat-menu-item>Mammals</button>
+                    <mat-menu #lowerToUpper="matMenu">
+                      <button mat-menu-item [matMenuTriggerFor]="lowerToUpperCategories">Categories</button>
+                      <button mat-menu-item [matMenuTriggerFor]="lowerToUpperBrands">Brands</button>
                     </mat-menu>
                     
-                    <mat-menu #invertebrates="matMenu">
-                      <button mat-menu-item>Insects</button>
-                      <button mat-menu-item>Molluscs</button>
-                      <button mat-menu-item>Crustaceans</button>
-                      <button mat-menu-item>Corals</button>
-                      <button mat-menu-item>Arachnids</button>
-                      <button mat-menu-item>Velvet worms</button>
-                      <button mat-menu-item>Horseshoe crabs</button>
+                    <mat-menu #upperToLower="matMenu">
+                      
+
+                        <button mat-menu-item [matMenuTriggerFor]="upperToLowerCategories">Ctaegories</button>
+                    
+                        <button mat-menu-item [matMenuTriggerFor]="upperToLowerBrands">Brands</button>
+                    
+                      </mat-menu>
+                    
+                    <mat-menu #lowerToUpperCategories="matMenu">
+                      <button mat-menu-item *ngFor="let c of categoriesForFilter" (click)="getLowerToUpperSortedProductsByCategory(c)">{{c}}</button>
+                    </mat-menu>
+                    <mat-menu #lowerToUpperBrands="matMenu">
+                        <button mat-menu-item *ngFor="let b of brandsForFilter" (click)="getLowerToUpperSortedProductsByBrand(b)" >{{b}}</button>
+                 
+                      </mat-menu>
+
+
+                    
+                    <mat-menu #upperToLowerCategories="matMenu">
+                        <button mat-menu-item *ngFor="let c of categoriesForFilter" (click)="getUpperToLowerSortedProductsByCategory(c)"  >{{c}}</button>
+                 
+                      
                     </mat-menu>
                     
-                    <mat-menu #fish="matMenu">
-                      <button mat-menu-item>Baikal oilfish</button>
-                      <button mat-menu-item>Bala shark</button>
-                      <button mat-menu-item>Ballan wrasse</button>
-                      <button mat-menu-item>Bamboo shark</button>
-                      <button mat-menu-item>Banded killifish</button>
-                    </mat-menu>
-                    
-                    <mat-menu #amphibians="matMenu">
-                      <button mat-menu-item>Sonoran desert toad</button>
-                      <button mat-menu-item>Western toad</button>
-                      <button mat-menu-item>Arroyo toad</button>
-                      <button mat-menu-item>Yosemite toad</button>
-                    </mat-menu>
-                    
-                    <mat-menu #reptiles="matMenu">
-                      <button mat-menu-item>Banded Day Gecko</button>
-                      <button mat-menu-item>Banded Gila Monster</button>
-                      <button mat-menu-item>Black Tree Monitor</button>
-                      <button mat-menu-item>Blue Spiny Lizard</button>
-                      <button mat-menu-item disabled>Velociraptor</button>
-                    </mat-menu>
+                    <mat-menu #upperToLowerBrands="matMenu">
+                        <button mat-menu-item *ngFor="let b of brandsForFilter" (click)="getUpperToLowerSortedProductsByBrand(b)" >{{b}}</button>
+                 
+                        
+                      </mat-menu>
+                      
+                 
       
 <!--/sorting by price-->
 
@@ -151,13 +157,17 @@
       </nav>
       <!--/.Navbar-->
 
+
+
+
       <!--Section: Products v.3-->
       <section class="text-center mb-4">
 
-        <!--Grid row-->
-        <div class="row wow fadeIn">
+        <!--Grid row for filter-->
+        <div  *ngIf="products"  class="row wow fadeIn">
 
-          <!--Grid column-->
+          <!--filter result-->
+          <!--Grid column -->
           <div *ngFor="let p of products | productFilter:category:brand:color:name" class="col-lg-3 col-md-6 mb-4">
 
             <!--Card-->
@@ -168,7 +178,7 @@
               <!--Card image-->
               <div *ngIf="p.frontCode" class="view overlay">
                 <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
-                <a>
+                <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
                   <div class="mask rgba-white-slight"></div>
                 </a>
               </div>
@@ -181,7 +191,7 @@
               <!--Card content-->
               <div class="card-body text-center">
                 <!--Category & Title-->
-                <a href="" class="grey-text">
+                <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank"  class="grey-text">
                   <h5>{{p.category}}</h5>
                 </a>
                 <h5>
@@ -204,94 +214,258 @@
 
           </div>
           <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/14.jpg" class="card-img-top" alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Sport wear</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text">Grey blouse
-                      <span class="badge badge-pill primary-color">bestseller</span>
-                    </a>
-                  </strong>
-                </h5>
-
-                <h4 class="font-weight-bold blue-text">
-                  <strong>99$</strong>
-                </h4>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Grid column-->
+<!--/filter result-->
+          
 
         </div>
-        <!--Grid row-->
+        <!--Grid row for filter-->
+
+
+
+
+
+
+
+  <!--Grid row for lower to upper category sort-->
+  <div  *ngIf="lowerToUpperProductsByCategory"  class="row wow fadeIn">
+
+
+
+      <!--Grid column -->
+      <div *ngFor="let p of lowerToUpperProductsByCategory" class="col-lg-3 col-md-6 mb-4">
+
+          <!--Card-->
+          <div class="card">
+
+
+
+            <!--Card image-->
+            <div *ngIf="p.frontCode" class="view overlay">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+            <!--/Card image-->
+
+
+
+
+
+            <!--Card content-->
+            <div class="card-body text-center">
+              <!--Category & Title-->
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" class="grey-text">
+                <h5>{{p.category}}</h5>
+              </a>
+              <h5>
+                <strong>
+                  <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]" class="dark-grey-text" target="_blank">{{p.name}}
+                    <span class="badge badge-pill danger-color">NEW</span>
+                  </a>
+                </strong>
+              </h5>
+
+              <h4 class="font-weight-bold blue-text">
+                <strong>{{p.soldPrice}} Tk.</strong>
+              </h4>
+
+            </div>
+            <!--Card content-->
+
+          </div>
+          <!--Card-->
+
+        </div>
+        <!--Grid column-->
+<!--/seraching result-->
+
+    </div>
+    <!--/Grid row for lower to upper category sort-->
+
+
+
+  <!--Grid row for upper to lower category sort-->
+  <div  *ngIf="upperToLowerProductsByCategory"  class="row wow fadeIn">
+
+
+
+      <!--Grid column -->
+      <div *ngFor="let p of upperToLowerProductsByCategory" class="col-lg-3 col-md-6 mb-4">
+
+          <!--Card-->
+          <div class="card">
+
+
+
+            <!--Card image-->
+            <div *ngIf="p.frontCode" class="view overlay">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+            <!--/Card image-->
+
+
+
+
+
+            <!--Card content-->
+            <div class="card-body text-center">
+              <!--Category & Title-->
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" class="grey-text">
+                <h5>{{p.category}}</h5>
+              </a>
+              <h5>
+                <strong>
+                  <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]" class="dark-grey-text" target="_blank">{{p.name}}
+                    <span class="badge badge-pill danger-color">NEW</span>
+                  </a>
+                </strong>
+              </h5>
+
+              <h4 class="font-weight-bold blue-text">
+                <strong>{{p.soldPrice}} Tk.</strong>
+              </h4>
+
+            </div>
+            <!--Card content-->
+
+          </div>
+          <!--Card-->
+
+        </div>
+        <!--Grid column-->
+<!--/seraching result-->
+
+    </div>
+    <!--/Grid row for upper to lower category sort-->
+
+
+
+  <!--Grid row for lower to upper brand sort-->
+  <div  *ngIf="lowerToUpperProductsByBrand"  class="row wow fadeIn">
+
+
+
+      <!--Grid column -->
+      <div *ngFor="let p of lowerToUpperProductsByBrand" class="col-lg-3 col-md-6 mb-4">
+
+          <!--Card-->
+          <div class="card">
+
+
+
+            <!--Card image-->
+            <div *ngIf="p.frontCode" class="view overlay">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+            <!--/Card image-->
+
+
+
+
+
+            <!--Card content-->
+            <div class="card-body text-center">
+              <!--Category & Title-->
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" class="grey-text">
+                <h5>{{p.category}}</h5>
+              </a>
+              <h5>
+                <strong>
+                  <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]" class="dark-grey-text" target="_blank">{{p.name}}
+                    <span class="badge badge-pill danger-color">NEW</span>
+                  </a>
+                </strong>
+              </h5>
+
+              <h4 class="font-weight-bold blue-text">
+                <strong>{{p.soldPrice}} Tk.</strong>
+              </h4>
+
+            </div>
+            <!--Card content-->
+
+          </div>
+          <!--Card-->
+
+        </div>
+        <!--Grid column-->
+<!--/seraching result-->
+
+    </div>
+    <!--/Grid row for lower to upper barnd sort-->
+
+
+
+
+
+  <!--Grid row for upper to lower brand sort-->
+  <div  *ngIf="upperToLowerProductsByBrand"  class="row wow fadeIn">
+
+
+
+      <!--Grid column -->
+      <div *ngFor="let p of upperToLowerProductsByBrand" class="col-lg-3 col-md-6 mb-4">
+
+          <!--Card-->
+          <div class="card">
+
+
+
+            <!--Card image-->
+            <div *ngIf="p.frontCode" class="view overlay">
+              <img src="http://localhost:8080/getPhotos/{{p.frontCode}}" class="card-img-top" alt="">
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" >
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+            <!--/Card image-->
+
+
+
+
+
+            <!--Card content-->
+            <div class="card-body text-center">
+              <!--Category & Title-->
+              <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]"  target="_blank" class="grey-text">
+                <h5>{{p.category}}</h5>
+              </a>
+              <h5>
+                <strong>
+                  <a href="JavaScript:Void(0);" [routerLink]="['productDetails', p.id]" class="dark-grey-text" target="_blank">{{p.name}}
+                    <span class="badge badge-pill danger-color">NEW</span>
+                  </a>
+                </strong>
+              </h5>
+
+              <h4 class="font-weight-bold blue-text">
+                <strong>{{p.soldPrice}} Tk.</strong>
+              </h4>
+
+            </div>
+            <!--Card content-->
+
+          </div>
+          <!--Card-->
+
+        </div>
+        <!--Grid column-->
+<!--/seraching result-->
+
+    </div>
+    <!--/Grid row for upper to lower barnd sort-->
+
+
 
       </section>
       <!--Section: Products v.3-->
-
-      <!--Pagination-->
-      <nav class="d-flex justify-content-center wow fadeIn">
-        <ul class="pagination pg-blue">
-
-          <!--Arrow left-->
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-
-          <li class="page-item active">
-            <a class="page-link" href="#">1
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">4</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">5</a>
-          </li>
-
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <!--Pagination-->
 
     </div>
   </main>
