--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -78,16 +78,11 @@
           </a>
         </li>
         <li id="paddingListId" class="nav-item">
-          <a href="" class="nav-link waves-effect" target="_blank">
+          <a href="JavaScript:Void(0)" class="nav-link waves-effect" data-toggle="modal" data-target="#emailModal" target="_blank">
             <i class="fas fa-envelope"></i>
           </a>
         </li>
-        <li id="paddingListId" class="nav-item" (click)="chattingModal.show()">
-          <a href="JavaScript:Void(0);" class="nav-link waves-effect">
-            <i class="fas fa-comment"></i>
-          </a>
-        </li>
-
+       
 
         <li id="paddingListId"  class="nav-item" (click)="cartModal.show()">
             <a href="JavaScript:Void(0);" class="nav-link waves-effect">
@@ -173,16 +168,6 @@
 </div>
 
 <!--/add carousel modal-->
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -430,33 +415,54 @@
 <!-- /Modal: modalCart -->
 
 
+<!--email modal-->
 
-<!--modal chatting-->
-<div mdbModal #chattingModal="mdbModal" class="modal fade right" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel"
-aria-hidden="true">
-<div class="modal-dialog modal-side modal-bottom-right " role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close pull-right" aria-label="Close" (click)="chattingModal.hide()">
-        <span aria-hidden="true">×</span>
-      </button>
-      <h4 class="modal-title w-100" id="myModalLabel">Question ? chat with us </h4>
-    </div>
-    <div class="modal-body">
-      <p>hellogfggggggggggggggg<br>
-        ggggggggggggggggggggggg<br>
-        ggggggggggggggggggggggg<br>
-        ggggggdffffffffffffffff<br>
-        fffffffffffffffffffdfff<br>
-        fffffffffffffffffffffff<br>
-        fasasaaaaaaaaaaaaaaaaaa<br>
-        aaaaaaaaaaaaaaaaaaaaaaa<br>
-      </p>
-    </div>
-    <div class="modal-footer">
-      <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="chattingModal.hide()" mdbWavesEffect>Close</button>
-      <button type="button" mdbBtn color="primary" class="relative waves-light" aria-label="Close" (click)="chattingModal.hide()" mdbWavesEffect>Save!</button>
+
+
+<div class="modal fade" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+     
+
+
+
+      <div class="modal-body mx-3">
+
+          <div class="md-form mb-4">
+              <i class="fas fa-user-circle prefix grey-text"></i>
+            <input type="text" id="user" class="form-control validate">
+              <label data-error="wrong" data-success="right" for="user">Your name</label>
+            </div>
+    
+
+
+
+        <div class="md-form mb-5">
+          <i class="fas fa-envelope prefix grey-text"></i>
+          <input type="email" id="mail" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="mail">Your email</label>
+        </div>
+
+        <div class="md-form mb-4">
+            <i class="fas fa-phone prefix grey-text"></i>
+          <input type="text" id="phn" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="phn">Your phone</label>
+        </div>
+
+
+        <div class="md-form mb-4">
+            <i class="far fa-comment prefix grey-text"></i>
+            <input type="text" id="msg" class="form-control validate">
+            <label data-error="wrong" data-success="right" for="phn">Your message</label>
+          </div>
+
+
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-default">Send</button>
+      </div>
     </div>
   </div>
-</div>
 </div>
