--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -379,9 +379,9 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>Product 1</td>
-                  <td>100$</td>
+                <tr *ngFor="let item of items">
+                  <td>{{item.product.name}}</td>
+                  <td>{{item.product.soldPrice}}</td>
                   <td><a><i class="fas fa-times"></i></a></td>
                 </tr>
     
@@ -393,7 +393,6 @@
           <div class="modal-footer">
         
             <strong id="totalTkPosition">Total = {{total}} Tk.</strong>
-        
           </div>
     
          
