--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
@@ -31,3 +31,16 @@ nav.navbar.fixed-top {
 mat-option{
   text-align: center;
 }
+
+#cartModal{
+  overflow: auto;
+}
+#cartImg{
+  width: 70px;
+  height: 70px;
+}
+
+#cartText{
+  font-size: 10px;
+  
+}
