--- a/E-Commerce-Front-End/E-Commerce-App/src/app/product-details/product-details.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/product-details/product-details.component.html
@@ -105,14 +105,14 @@
           <div class="p-4">
 
             <div class="mb-3">
-              <a href="">
-                <span class="badge purple mr-1">Category 2</span>
+              <a href="JavaScript:Void(0)">
+                <span id="badgeColor" class="badge purple mr-1">Category 2</span>
               </a>
-              <a href="">
-                <span class="badge blue mr-1">New</span>
+              <a href="JavaScript:Void(0)">
+                <span id="badgeColor" class="badge blue mr-1">New</span>
               </a>
-              <a href="">
-                <span class="badge red mr-1">Bestseller</span>
+              <a href="JavaScript:Void(0)">
+                <span id="badgeColor" class="badge red mr-1">Bestseller</span>
               </a>
             </div>
 
