--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -390,7 +390,7 @@
                     <span>Quantity : </span>{{item.quantity}}<br>
                   
                   </td>
-                  <td><a href="JavaScript:Void(0)" (click)="remove(item.product.id)"><i class="fas fa-times"></i></a></td>
+                  <td><a href="JavaScript:Void(0)"><i  (click)="remove(item.product.id)" class="fas fa-times"></i></a></td>
                 </tr>
     
               </tbody>
