--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.html
@@ -36,7 +36,7 @@
           <div class="dropdown-menu">
               <a class="dropdown-item" href="JavaScript:Void(0);" (click)="addProductModal.show()">Add new product</a>
               <a class="dropdown-item" href="JavaScript:Void(0);" (click)="addCarouselModal.show()">Edit carousel pictures</a>
-              <a class="dropdown-item" href="#">Log Out (Atif Aslam)</a>
+              <a class="dropdown-item" href="manageCheckout">Manage checkout</a>
               <a class="dropdown-item" href="#">Log Out (Atif Aslam)</a>
 
 
