checkout remove completed

--- a/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/checkout/checkout.component.html
@@ -237,7 +237,7 @@
 
             <hr class="mb-4">
             <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="!(cashOnDelivery && person.firstName && person.lastName
-             && person.phone && person.presentAddress)" (click)="continueCheckout()">Continue to checkout</button>
+             && person.phone && person.presentAddress && cartNumber)" (click)="continueCheckout()">Continue to checkout</button>
 
           </form>
 
